# playproject

./: README.rst  manage.py  requirements.txt  setup.cfg
common/: __init__.py  abstract.py  base.py  loaders.py
common/static/js/: app.js
common/static/js/babel-core/5.8.24/: browser.js
common/static/js/babel-core/6.1.19/: browser.js
common/static/js/remarkable/1.6.2/: remarkable.js
common/templates/: _base_script.html
common/templatetags/: comtags.py
kanban/index/: viewset.py
kanban/index/index/: urls.py  views.py
kanban/index/index/templates/: index.html
playproject/: settings.py  urls.py  wsgi.py
static/js/react/15.2.0/: react.js
