[metadata]
name = playproject
summary = juneyang
description-file =
    README.rst
author = juneyang
author-email = yang.june@outlook.com
home-page = http://www.playproject.com/
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: PlatPorject
    Framework :: Django
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Topic :: Internet :: WWW/HTTP

